--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-layout-components": "^3.0.6",
+    "react-resize-observer": "^1.1.1",
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
